<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Arcanum</string>
    <string name="btn_Send">Send</string>
    
    <string name="menu_load_server_key">Load server key</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_contacts_sync">Sync</string>
    <string name="menu_settings">Settings</string>
    
    <string name="pref_category_general">General settings</string>
    <string name="pref_displayname">Display Name</string>
    <string name="pref_displayname_summary">Defines a name that other users can see instead of your contact name.</string>
    <string name="pref_ringtone">Ringtone: New message </string>
    <string name="pref_ringtone_summary">Defines the ringtone if a new message comes in.</string>
    
    <string name="pref_category_about">About</string>
    <string name="pref_web_page">http://arcanum-app.appspot.com/</string>
    
    
    <string name="title_activity_contacts">Contacts</string>
    
    <string name="notfiy_new_message">New message!</string>
    <string name="notfiy_new_message_detail">New message from %1$s.</string>
    
    <string name="msg_title">Chat with %1$s</string>
    <string name="toast_msg_send_success">Message send successfully.</string>
    <string name="toast_msg_send_failed">Message sending failed!</string>
        
    <string name="contact_image_desc">Contact Image</string>
    
    <string name="service_message_name">Message Service</string>
    <string name="service_message_desc">Message Service to handle all receiving messages.</string>
    
    <string name="message_status_cryptofail">ERR: Crypto:Invalid Message</string>
    <string name="message_status_imagedesc">Describes the current message status.</string>
</resources>